# image-processing-widget

./: .gitignore  .gitmodules  404.html  LICENSE  MANIFEST.in  README.md  image_processing_config.ini  index.html  index.xml  main_widget.spec  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: codeql-analysis.yml  gh-pages.yml
categories/: index.html  index.xml
grayscale_image_processing_widget/: defs.py  dock.py  image_widget.py  main_widget.py
grayscale_image_processing_widget/custom_components/: __init__.py  badge_button.py  double_slider.py  gui_save_base.py  mimetypes.py  my_colors.py
grayscale_image_processing_widget/groupboxes/: groupbox_orient.py  groupbox_peek.py  groupbox_process.py  groupbox_save.py
grayscale_image_processing_widget/process_widgets/: __init__.py  bilateral_filtering.py  blur.py  blur_gaussian.py  blur_homogeneous.py  blur_median.py  brightness_contrasts.py  canny_edge.py  detect_circles.py  detect_lines.py  dilate.py  erode.py  find_contours.py  fit_boundary.py  gradients.py  in_range.py  morph.py  morph_ex.py  threshold.py
grayscale_image_processing_widget/workers/: process_worker.py
hugo/: config.toml
image_processing_widget/: defs.py  dock.py  main_widget.py  plugin_objects.py  process_plugin.py  roi_plugin.py
image_processing_widget/custom_components/: __init__.py  badge_button.py  dock_base.py  gui_save_base.py  my_colors.py  my_slider.py  path_edit.py  process_base.py  roi_data_plot.py  spinbox_range_slider.py  spinbox_slider.py
image_processing_widget/display_widget/: __init__.py  histogram_widget.py  image_widget.py
image_processing_widget/docks/: __init__.py  controls_dock.py  histogram_dock.py
page/1/: index.html
plugins/: aruco_detect.image-processing-plugin  aruco_pose.image-processing-plugin  bilateral_filtering.image-processing-plugin  bilateral_filtering.py  blob_detect.py  bloc_detect.image-processing-plugin  blur.image-processing-plugin  blur.py  blur_gaussian.image-processing-plugin  blur_gaussian.py  blur_homogeneous.image-processing-plugin  blur_homogeneous.py  blur_median.image-processing-plugin  blur_median.py  brightness_contrasts.image-processing-plugin  brightness_contrasts.py  canny_edge.image-processing-plugin  canny_edge.py  detect_circles.image-processing-plugin  detect_circles.py  detect_lines.image-processing-plugin  detect_lines.py  dilate.image-processing-plugin  dilate.py  erode.image-processing-plugin  erode.py  filter2d.image-processing-plugin  filter2d.py  find_contours.image-processing-plugin  find_contours.py  fit_boundary.image-processing-plugin  fit_boundary.py  gen_info_files.py  gradients.image-processing-plugin  gradients.py  histogram.image-processing-plugin  hlac.image-processing-plugin  hsv_histogram.image-processing-plugin  in_range.image-processing-plugin  in_range.py  (+8 more)
tags/: index.html  index.xml
(+53 files in other folders)
