[tool.poetry]
name = "grayscale-image-processing-widget"
version = "0.1.1"
description = "GUI to explore OpenCV grayscale image processing functions"
authors = ["wenliangyeoh <wlyeoh@cc.saga-u.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-python = "^4.5.5"
PySide6 = "^6.3.0"
pyqtgraph = "^0.12.4"
QtAwesome = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pyinstaller = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grayscale_image_processing = 'grayscale_image_processing_widget.main_widget:main'