[tool.poetry]
name = "image-processing-widget"
version = "0.2.2"
description = "GUI to explore OpenCV image processing functions"
authors = ["wenliangyeoh <wlyeoh@cc.saga-u.ac.jp>"]
readme = "README.md"
repository = "https://github.com/fukuda-lab-saga/image-processing-widget"
keywords = ["opencv", "gui", "pyside6"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
]
include = [
    "image_processing_config.ini",
    "image_processing_widget/resource/*",
    "plugins/*",
    "plugins/**/*",
]


[tool.poetry.dependencies]
python = ">3.10, <3.11"
pyqtgraph = "^0.12.4"
opencv-python = "~4.5"
QtAwesome = "^1.1.1"
Yapsy = "^1.12.2"
numpy = "^1.23.2"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
pyinstaller = "~5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
image_processing = 'image_processing_widget.main_widget:main'